--- a/src/pages/specific-book/Specific-book.scss
+++ b/src/pages/specific-book/Specific-book.scss
@@ -34,8 +34,12 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
-          .addCard {
+          .buttonArrow {
+            display: flex;
             height: 50%;
+            .imgArrow {
+              width: 10px;
+            }
           }
         }
       }
