--- a/src/pages/specific-book/Specific-book.scss
+++ b/src/pages/specific-book/Specific-book.scss
@@ -36,7 +36,7 @@
           justify-content: space-between;
           .buttonArrow {
             display: flex;
-            height: 50%;
+            // height: 50%;
             .imgArrow {
               width: 10px;
             }
