--- a/src/pages/signin/Signin.scss
+++ b/src/pages/signin/Signin.scss
@@ -3,25 +3,20 @@
   flex-direction: column;
   align-items: center;
   .avatar2 {
-    height: 160px;
+    width: 160px;
     margin-top: 5em;
     margin-bottom: 2em;
     border: 0.01em solid rgb(208, 208, 248);
+    @media (max-width: 320px) {
+      width: 200px;
+    }
   }
-  #button,
-  #name {
-    width: 200px;
-    display: block;
-    text-align: center;
-    margin-top: 20px;
-  }
-}
-@media (max-width: 320px) {
-  .avatar2 {
-    width: 200px;
-  }
-  #name,
-  #button {
-    width: 304px;
+  .signin-form {
+    @media (max-width: 320px) {
+      width: 100%;
+    }
+    .btn-sign-in {
+      width: 100%;
+    }
   }
 }
