--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,5 +1,8 @@
 .header-navbar {
   border: 1px solid #000;
+  .container {
+width: 100%;
+  
   .cart-img {
     height: 40px;
     margin-right: 20px;
@@ -13,4 +16,5 @@
     display: flex;
     align-items: center;
   }
+}
 }
