--- a/src/pages/book-list/book/Book.scss
+++ b/src/pages/book-list/book/Book.scss
@@ -1,8 +1,12 @@
-.form-book {
-  border: 1px solid #000;
-  margin: 10px;
-  padding: 10px;
-  .title-book {
-    font-weight: bolder;
+.book-view {
+  margin-bottom: 20px;
+
+  .form-book {
+    border: 1px solid #000;
+    padding: 10px;
+    height: 100%;
+    .title-book {
+      font-weight: bolder;
+    }
   }
 }
