--- a/src/pages/cart/Cart-empty/Cart-empty.scss
+++ b/src/pages/cart/Cart-empty/Cart-empty.scss
@@ -1,9 +1,9 @@
 .empty-basket {
-  width: 100%;
+  margin-left: 0;
   .cart-img {
     text-align: center;
     height: 250px;
-    margin-top: 70px;
+    margin-top: 100px;
     .cart-empty-img {
       height: 200px;
     }
