--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
 
 .app {
   height: 100%;
   display: flex;
   flex-direction: column;
   .page {
-    flex:1;
+    flex: 1;
   }
 }
